--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>heading</title>
+    <title>Document</title>
 </head>
-
-    <h1>MY FIRST HEADING</h1>
-    
+<body>
+    <h1>hii</h1>
 </body>
-</html
+</html>
